--- a/result.html
+++ b/result.html
@@ -15,10 +15,9 @@
 
     <script>
         const fakeResults = [
-            "你的 IQ 超過 300！你可能是外星人！",
-            "測試結果：你的智商等於愚人節日期（4月1日），天選之人！",
-            "AI 分析結果：你的腦袋已經超越 AI！",
-            "你是全世界最聰明的人之一，但這是愚人節玩笑 😆"
+            "你以為你是天才嗎哈哈哈",
+            "測試結果：今天是愚人節啦，還不祝我生日快樂！",
+            "AI 分析結果：你的腦袋都是酒精！"
         ];
 
         setTimeout(() => {
