--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>超專業 IQ 測試</h1>
-        <p>本測驗由「國際腦科學研究院」認證，通過 AI 技術精準分析你的智商！</p>
+        <p>本測驗由「郭阿綸的腦袋」認證，通過 AI 技術精準分析你的智商！</p>
         <button onclick="startTest()">開始測驗</button>
     </div>
     <script>
