--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>超專業 IQ 測試</title>
+    <title>超專業 懂綸 測試</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>超專業 IQ 測試</h1>
-        <p>本測驗由「郭阿綸的腦袋」認證，通過 AI 技術精準分析你的智商！</p>
+        <h1>超專業 懂綸 測試</h1>
+        <p>本測驗由「郭阿綸的腦袋」提供，通過 測驗看你你懂不懂綸！</p>
         <button onclick="startTest()">開始測驗</button>
     </div>
     <script>
