--- a/result.html
+++ b/result.html
@@ -9,15 +9,14 @@
 <body>
     <div class="container">
         <h1>測驗結果分析中...</h1>
-        <p id="loading">AI 正在計算你的智商，請稍等...</p>
+        <p id="loading">AI 正在分析你行不行，請稍等...</p>
         <p id="result" style="display: none;"></p>
     </div>
 
     <script>
         const fakeResults = [
-            "你以為你是天才嗎哈哈哈",
-            "測試結果：今天是愚人節啦，還不祝我生日快樂！",
-            "AI 分析結果：你的腦袋都是酒精！"
+            "有空做測驗，不如打電話唱歌給我聽!",
+            "測試結果：今天是愚人節啦，還不祝我生日快樂！"
         ];
 
         setTimeout(() => {
