--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>超專業 懂綸 測試</h1>
-        <p>本測驗由「郭阿綸的腦袋」提供，通過 測驗看你你懂不懂綸！</p>
+        <p>本測驗由「郭阿綸的腦袋」提供，透過測驗看你懂不懂綸！</p>
         <button onclick="startTest()">開始測驗</button>
     </div>
     <script>
