--- a/quiz.html
+++ b/quiz.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>你懂綸，綸就會幫你 - 作答中</title>
+    <title>懂綸測驗 - 作答中</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>你懂綸，綸就會幫你</h1>
+        <h1>懂綸測驗</h1>
         <p id="question">載入題目中...</p>
         <div id="options"></div>
         <button id="next-btn" onclick="nextQuestion()">下一題</button>
@@ -19,7 +19,7 @@
             { question: "綸最喜歡的酒？", options: ["伏特加", "琴酒", "威士忌", "以上皆是"] },
             { question: "誰最帥？", options: ["曜綸", "秩維", "建堂", "泓翰"] },
             { question: "綸最喜歡的城市？", options: ["高雄", "台南", "台中", "新竹"] },
-            { question: "你知道今天誰生日哪？", options: ["貼心綸", "風火綸", "郭阿綸", "新竹攻城獅"] }
+            { question: "你知道今天誰生日嗎？", options: ["貼心綸", "風火綸", "郭阿綸", "新竹攻城獅"] }
         ];
         
         let currentQuestion = 0;
