--- a/quiz.html
+++ b/quiz.html
@@ -16,8 +16,8 @@
 
     <script>
         const questions = [
-            { question: "綸最喜歡的酒？", options: ["伏特加", "琴酒", "威士忌", "以上皆是"] },
-            { question: "誰最帥？", options: ["曜綸", "秩維", "建堂", "泓翰"] },
+            { question: "綸最喜歡的酒？", options: ["伏特加", "琴酒", "威士忌", "龍舌蘭"] },
+            { question: "綸最喜歡的火鍋料？", options: ["魚餃", "蛋餃", "豆腐", "貢丸"] },
             { question: "綸最喜歡的城市？", options: ["高雄", "台南", "台中", "新竹"] },
             { question: "你知道今天誰生日嗎？", options: ["貼心綸", "風火綸", "郭阿綸", "新竹攻城獅"] }
         ];
